fixed alignment in the Weight Tracker page, set Weight Tracker page to be home, made text weight and size consistent, improved responsiveness of the graph, repository file needs to be reorganised and comments needs to be added as well as Calculator page needs to be fixed

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,23 @@ input, select{
     border-radius: 10px;
 }
 
+.App { 
+    margin: 0 20%;
+}
+
+@media (max-width:  1200px) {
+    .App { 
+        margin: 0 10%;
+    }
+}
+
+@media (max-width: 768px) {
+    .App { 
+        margin: 0 7.5%;
+    }
+}
+
+
 button {
     width: 20%;
     border-radius: 10px;
